Fixed proxy heroku api url

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://good-news-capstone.herokuapp.com/"
+  "proxy": "https://good-news-capstone.herokuapp.com"
 }
