Added scroll to top button on home page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll-up-button": "^1.6.4",
     "react-share": "^4.3.1",
     "web-vitals": "^0.2.4"
   },
