--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dark-mode-switch": "^1.0.0",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.5",
     "firebaseui": "^4.7.1",
